--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: piazza-rb
+          name: piazza-db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
